examples/valid/11_function_types.lane
module Examples.Valid11

import Basic.Ops.*

import Basic.Io.{Io, Write}

pub fn apply(value : Int, f : (Int) -> Int) -> Int {
  f(value)
}

fn[A] apply_generic(value : A, f : (A) -> A) -> A {
  f(value)
}

pub let id_int : (Int) -> Int = fn (value) {
  value
}

pub let id_poly : [A](A) -> A = fn[A] (value) {
  value
}

pub fn answer() -> Unit ! Io {
  if apply(42, id_int) == 42 {
    Write::println!("apply=42")
  } else {
    Write::println!("bad:apply=42")
  }
}
