examples/invalid/06_unqualified_variant_pattern.lane
module Examples.Invalid06
// invalid: enum variants in patterns must be qualified
pub enum Option[A] {
  none
  some(A)
}

pub fn unwrap_or(value : Option[Int], fallback : Int) -> Int {
  match value {
    none => fallback
    some(x) => x
  }
}
